<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameTxt"
            android:textSize="32dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/nameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/hypoBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hypoTxt" />

        <Button
            android:id="@+id/decimalBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decimalTxt" />

        <Button
            android:id="@+id/binaryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/binaryTxt" />

        <Button
            android:id="@+id/exitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exitTxt" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>