<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BinaryToDecimal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/greetingDecimalLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text=""
            android:textSize="32dp" />

        <TextView
            android:id="@+id/binaryNumberLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/decimalNumberTxt"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/binaryNumberTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/resultDecimalLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text=""
            android:textSize="32dp" />

        <Button
            android:id="@+id/calcDecimalBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/calculateTxt" />

        <Button
            android:id="@+id/returnDecimalBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/returnTxt" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>